--- a/app-tv-server/src/main/res/values/strings.xml
+++ b/app-tv-server/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">MyTeamPlayer</string>
+    <string name="app_name">My Team Player</string>
+    <string name="copyright">© 2022–2023 Dmitriy Gorbunov</string>
 </resources>
